# bevy-fluid-sample

./: .editorconfig  .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  pages.yml
assets/kenney_onscreen-controls/: License.txt
assets/shaders/: add_force.wgsl  advect_levelset.wgsl  advection.wgsl  coordinate.wgsl  divergence.wgsl  euler_fluid.wgsl  fluid_material.wgsl  fluid_material_2d.wgsl  fluid_uniform.wgsl  grid_label.wgsl  initialize_grid_center.wgsl  initialize_grid_centered.wgsl  jacobi_iteration.wgsl  solve_pressure.wgsl  solve_velocity.wgsl  update_grid_label.wgsl
assets/shaders/recompute_levelset/: calculate_sdf.wgsl  initialize.wgsl  initialize_seeds.wgsl  iterate.wgsl  jump_flooding.wgsl  recompute_sdf.wgsl
assets/shaders/visualize/: scalar.wgsl
crates/example_utils/: Cargo.toml
crates/example_utils/src/: fps_counter.rs  lib.rs
docs/: sharing_texture.md
examples/: demo.rs  interaction.rs  mouse_interaction.rs  multiple.rs  water_surface.rs
examples/demo/: main.rs  ui.rs
src/: advection_plugin.rs  euler_fluid.rs  lib.rs  main.rs  material.rs  texture.rs  ui.rs
src/euler_fluid/: add_force.rs  advection.rs  definition.rs  fluid_bind_group.rs  fluid_material.rs  geometry.rs  grid_label.rs  materials.rs  node.rs  pipelines.rs  projection.rs  render_node.rs  setup.rs  setup_components.rs  uniform.rs
src/euler_fluid/materials/: divergence.rs  jfa_seeds.rs  jump_flooding_uniform.rs  levelset.rs  local_force.rs  prepare_bind_group.rs  pressure.rs  staggered_velocity.rs
src/euler_fluid/pipelines/: advect_levelset.rs  recompute_levelset.rs  update_grid_label.rs
src/euler_fluid/projection/: divergence.rs  jacobi_iteration.rs  solve.rs
src/euler_fluid/shaders/: advect_levelset.wgsl  advection.wgsl  divergence.wgsl  fluid_uniform.wgsl  initialize_grid_center.wgsl  initialize_velocity.wgsl  jacobi_iteration.wgsl  update_grid_label.wgsl
src/euler_fluid/shaders/recompute_levelset/: calculate_sdf.wgsl  initialize.wgsl
src/material/shaders/: render_velocity.wgsl  render_velocity_2d.wgsl
