[package]
name = "bevy-fluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/*",
]

[dependencies]
bevy = {version = "0.14.0", features = ["webgpu"]}
bytemuck = "1.15.0"

[dev-dependencies]
iyes_perf_ui = "0.3.0"
rand = "0.8.5"
example_utils = { path = "crates/example_utils" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1