[package]
name = "bevy-fluid"
version = "0.1.0"
edition = "2021"
description = "An eularian fluid simulation plugin for Bevy."
categories = ["game-development", "science", "simulation"]
keywords = ["bevy", "fluid", "simulation", "physics", "graphics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/narasan49/bevy-fluid-sample"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/*",
]

[dependencies]
bevy = {version = "0.14.0"}

[dev-dependencies]
bevy = {version = "0.14.0", features = ["webgpu"]}
iyes_perf_ui = "0.3.0"
rand = "0.8.5"
example_utils = { path = "crates/example_utils" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1